[package]
name = "rpgmdec"
version = "1.0.2"
edition = "2024"

[dependencies]
cpal = "0.17.3"
dirs = "6.0.0"
fltk = { version = "1.5.22", features = [
    "static-msvcrt",
    "use-ninja",
    "no-gdiplus",
    "single-threaded",
] }
fltk-theme = "0.7.9"
fontdue = { version = "0.9.3", features = ["parallel", "std"] }
gxhash = { version = "3.5.0", features = ["deterministic"] }
indexmap = "2.13.1"
phf = { version = "0.13.1", features = ["macros"] }
rayon = "1.11.0"
rpgmad-lib = "4.0.0"
rpgmasd = { package = "rpgm-asset-decrypter-lib", version = "3.2.2" }
strum_macros = "0.28.0"
symphonia = { version = "0.5.5", features = [
    "ogg",
    "isomp4",
    "aac",
    "vorbis",
], default-features = false }
sys-locale = "0.3.2"
time = "0.3.47"
walkdir = "2.5.0"
webbrowser = { version = "1.2.0", features = ["disable-wsl", "hardened"] }

[build-dependencies]
embed-resource = "3.0.8"
